--- a/index.html
+++ b/index.html
@@ -11,14 +11,7 @@
 </head>
 
 <body>
-    <div id="player">
-    </div>
-
-<div id="environment"> 
-
-</div>
-
-
+TEST
 </body>
 
 <script src="index.js"></script>
